# hello-fastapi

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
hello_fast_api/: main.py
